2008-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.1.14 released.
	* coders/pdf.c (ReadPDFImage): Fix bounding-box issue with rotated
	PDFs.

2008-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Back-port more robust version
	from GraphicsMagick 1.2.
	* coders/pict.c (ReadPICTImage): Back-port more robust version
	from GraphicsMagick 1.2.
	* coders/cineon.c (ReadCINEONImage): Back-port more robust version
	from GraphicsMagick 1.2.
	* magick/gem.c (GenerateNoise): Poisson noise generation was
	taking excessively long and producing wrong results.

2008-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.1.13 released.

2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Don't leak displacement
	image when Displacement composition is used.
	* magick/{annotate.c,composite.c,paint.c,render.c}
	(AlphaComposite): Fix alpha composite when both pixels contain
	transparency.

2008-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Preserve canvas image
	colorspace.

2008-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand, MogrifyImageCommand,
	DisplayImageCommand): Gamma multiple channel syntax was broken.
	Now it is fixed.

2008-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CompositeImageList): Don't overwrite matte
	flag for CopyOpacity composition.
	* magick/composite.c (CompositeImage): CopyOpacity composition
	needs the opacity channel to be enabled.
	* PerlMagick/Magick.xs: Dissolve composition with Opacity was not
	working right.  Now it does.

2008-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (HWBTransform): Hue value range was scaled wrong,
	leading to clipping.
	(TransformHWB): Hue value range was scaled wrong, leading to
	clipping.
